RESOLVED FIXED13000
Range.createContextualFragment is not supported
https://bugs.webkit.org/show_bug.cgi?id=13000
Summary Range.createContextualFragment is not supported
webkit
Reported 2007-03-07 03:06:53 PST
When calling Range.createContextualFragment(html), a NOT_SUPPORTED_ERR is thrown. The supplied URL is a Test Case for it. It works well with Firefox 2 and Opera (Latest Build).
Attachments
Test Case (815 bytes, text/html)
2007-03-07 03:10 PST, webkit
no flags
webkit
Comment 1 2007-03-07 03:10:22 PST
Created attachment 13513 [details] Test Case
Justin Garcia
Comment 2 2007-03-08 14:14:28 PST
Note You need to log in before you can comment on or make changes to this bug.