LayoutTests:

Reviewed by harrison

        <http://bugs.webkit.org/show_bug.cgi?id=13000>
        Range.createContextualFragment is not supported

        * fast/dom/Range/13000-expected.txt: Added.
        * fast/dom/Range/13000.html: Added.

WebCore:

        Reviewed by harrison

        <http://bugs.webkit.org/show_bug.cgi?id=13000>
        Range.createContextualFragment is not supported

        * dom/Range.cpp:
        (WebCore::Range::createContextualFragment): The
        "startContainer" may not be a container, if the
        range starts inside text.  In that case, look
        to the parent of the start node for an HTMLElement.



Canonical link: https://commits.webkit.org/16875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20066 268f45cc-cd09-0410-ab3c-d52691b4dbfc