WebCore/dom/Range.cpp
@@ -1083,12 +1083,14 @@ PassRefPtr<DocumentFragment> Range::createContextualFragment(const String &html,
         return 0;
     }
 
-    if (! m_startContainer->isHTMLElement()) {
+    Node* htmlElement = m_startContainer->isHTMLElement() ? m_startContainer.get() : m_startContainer->parentNode();
+    
+    if (!htmlElement->isHTMLElement()) {
         ec = NOT_SUPPORTED_ERR;
         return 0;
     }
 
-    RefPtr<DocumentFragment> fragment = static_cast<HTMLElement*>(m_startContainer.get())->createContextualFragment(html);
+    RefPtr<DocumentFragment> fragment = static_cast<HTMLElement*>(htmlElement)->createContextualFragment(html);
     if (!fragment) {
         ec = NOT_SUPPORTED_ERR;
         return 0;
